# gp-sync

./: .gitignore  README.md  pyproject.toml
gp_dl/: __init__.py  browser.py  cli.py  config.py  core.py  google_photos_ui.py  lib.py  local_state.py  manifest.py  parsing.py  sync.py  workflow.py
gp_dl/locales/: en.json  fr.json
gp_sync/: sync.py
tests/: test_propagate_deletes.py  test_sync_chunking.py  test_sync_motion_fallback.py
