[project]
name = "gp-sync"
version = "0.1.0"
description = "A Python-based Google Photos album sync tool built with Selenium."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL v3" }
authors = [{ name = "dkrahmer", email = "doug.gp-sync@remhark.com" }, { name = "csd4ni3l", email = "csd4ni3l@duck.com" }]
dependencies = ["selenium==4.44.0"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]

[project.scripts]
gp-sync = "gp_sync.cli:run_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["gp_sync"]

[tool.setuptools.package-data]
gp_sync = ["locales/*.json"]
